--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Applayer || Medical App Landing Page</title>
+    <title>Parkmatix</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.svg"/>
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img//logo/parkmatix(3).png"/>
     <!-- Place favicon.ico in the root directory -->
 
     <!-- ========================= CSS here ========================= -->
@@ -70,13 +70,13 @@
                       <a class="page-scroll" href="#feature">Prednosti</a>
                     </li>
                     <li class="nav-item">
-                      <a class="page-scroll" href="#about">O nama</a>
+                      <a class="page-scroll" href="#about">Usluge</a>
                     </li>
                     <li class="nav-item">
                       <a class="page-scroll" href="#testimonial">Recenzije</a>
                     </li>
                     <li class="nav-item">
-                      <a class="page-scroll" href="#explore">Funkcije</a>
+                      <a class="page-scroll" href="#explore">Plaćanje</a>
                     </li>
                     <li class="nav-item">
                       <a class="page-scroll" href="#faq">FAQ</a>
@@ -107,12 +107,12 @@
 							</h1>
               <p class="wow fadeInUp" data-wow-delay=".4s">
 				Parkmatix omogućava korisnicima jednostavno i sigurno plaćanje parkinga              </p>
-              <a href="javascript:void(0)" class="main-btn btn-hover wow fadeInUp" data-wow-delay=".6s">Get Started</a>
+            <!--  <a href="javascript:void(0)" class="main-btn btn-hover wow fadeInUp" data-wow-delay=".6s">Get Started</a>  -->
             </div>
 					</div>
 					<div class="col-lg-6">
 						<div class="hero-img wow fadeInUp" data-wow-delay=".5s">
-							<img src="assets/img/hero/mob2.png" alt="" class="img-1">
+							<img src="assets/img/hero/hero.svg" alt="" class="img-1">
 
 						</div>
 					</div>
@@ -165,7 +165,7 @@
 							</div>
 							<div class="content">
 								<h3>Svi podaci na jednom i sigurnom mjestu</h3>
-								<p>Moguće je dodati sva vozila koja korisnik parkira, osobno vozilo, poslovno vozilo</p>
+								<p>Moguće je dodati sva vozila koja korisnik parkira, osobno vozilo, poslovno vozilo...</p>
 							</div>
 						</div>
 					</div>
@@ -187,7 +187,7 @@
 							</div>
 							<div class="content">
 								<h3>Plaćanje jednokratne parkirne karte ili periodične</h3>
-								<p>Putem web portala je moguće kreirati Parkmatix id račun, prijaviti i spasiti kreditnu ili debitnu karticu i platiti parking jednostavno
+								<p>Putem web portala je moguće kreirati Parkmatix račun, prijaviti se i spasiti kreditnu ili debitnu karticu i platiti parking jednostavno
 								</p>
 							</div>
 						</div>
@@ -203,8 +203,8 @@
 				<div class="row justify-content-center">
 					<div class="col-lg-7">
 						<div class="section-title mb-60 text-center">
-							<h1 class="mb-25 wow fadeInUp" data-wow-delay=".2s">Different Types Of Departments</h1>
-							<p class="wow fadeInUp" data-wow-delay=".4s">Lorem ipsum dolor samet consenter discing elitr, serewd diam <br class="d-none d-lg-block"> nonumy eirmod tempor invidunt ut labore.</p>
+							<h1 class="mb-25 wow fadeInUp" data-wow-delay=".2s">Mogućnosti i Usluge</h1>
+							<p class="wow fadeInUp" data-wow-delay=".4s">Istražite raznovrsne mogućnosti i usluge koje nudi naša aplikacija. Omogućavamo vam jednostavno upravljanje vozilima, profilom i plaćanjem, te pružamo napredne funkcije za brže i efikasnije parkiranje.</p>
 						</div>
 					</div>
 				</div>
@@ -213,42 +213,42 @@
 					<div class="col-xl-3 col-lg-3">
 						<div class="single-department">
 							<span></span>
-							<h3>General</h3>
-							<p>Lorem ipsum dolor samet consenter ching elitr serewd diam nonumy.</p>
+							<h3>Pamti vozila</h3>
+							<p>Korisniku je omogućeno dodavanje tip vozila, sliku vozila, tablice, opis vozila…</p>
 						</div>
 						<div class="single-department">
 							<span></span>
-							<h3>Ophthalmology</h3>
-							<p>Lorem ipsum dolor samet consenter ching elitr serewd diam nonumy.</p>
+							<h3>Profil</h3>
+							<p>Upravljanje profilom i podacima na profilu.</p>
 						</div>
 						<div class="single-department">
 							<span></span>
-							<h3>Neurology</h3>
-							<p>Lorem ipsum dolor samet consenter ching elitr serewd diam nonumy.</p>
+							<h3>Izbor zona</h3>
+							<p>Automatski izbor zona, moguće je izabrati i javnu garažu.</p>
 						</div>
 					</div>
 
 					<div class="col-xl-6 col-lg-6">
 						<div class="middle-image">
-							<img src="assets/img/department/department.png" alt="" class="w-100">
+							<img src="assets/img/department/mobiteli.svg" alt="" class="w-70">
 						</div>
 					</div>
 
 					<div class="col-xl-3 col-lg-3">
 						<div class="single-department">
 							<span></span>
-							<h3>Dental</h3>
-							<p>Lorem ipsum dolor samet consenter ching elitr serewd diam nonumy.</p>
+							<h3>Plaćanje</h3>
+							<p>Plaćanje karticom bez spašavanja kartice i sa spašavanjem. Slanje R1 računa za firmu putem emaila.</p>
 						</div>
 						<div class="single-department">
 							<span></span>
-							<h3>Cardiology</h3>
-							<p>Lorem ipsum dolor samet consenter ching elitr serewd diam nonumy.</p>
+							<h3>Automatsko plaćanje</h3>
+							<p>Automatsko plaćanje parkirnih karti ukoliko se kupi karta sa auto-produženjem.</p>
 						</div>
 						<div class="single-department">
 							<span></span>
-							<h3>Laboratory</h3>
-							<p>Lorem ipsum dolor samet consenter ching elitr serewd diam nonumy.</p>
+							<h3>Parking karta</h3>
+							<p>Svaki korisnik dobija jedinstvenu parking kartu sa QR generisanim kodom uz razne metapodatke I opcije kao što je dijeljenje karte, slanje geolokacije.</p>
 						</div>
 					</div>
 				</div>
@@ -319,32 +319,30 @@
 				<div class="row">
 					<div class="col-xl-6 col-lg-5">
 						<div class="steps-image">
-							<img src="assets/img/steps/steps.png" alt="" class="w-100">
+							<img src="assets/img/steps/placanje.svg" alt="" class="w-90">
 						</div>
 					</div>
 
 					<div class="col-xl-6 col-lg-7">
 						<div class="steps-content">
 							<div class="section-title mb-60">
-								<h1 class="mb-35">Very Easy To Use Just Following 3 Steps</h1>
-								<p>Lorem ipsum dolor samet consenter discing elitr, serewd
-									diam nonumy eirmod tempor invidunt.</p>
+								<h1 class="mb-35">Inovativna Rješenja za Plaćanje Parking Usluga</h1>
 							</div>
 
 							<div class="single-department">
 								<span></span>
-								<h3>Install This App</h3>
-								<p>Lorem ipsum dolor samet consenter discing elitr, serewd diam nonumy eirmod tempor invidunt.</p>
+								<h3>Plaćanje karticama i kad je korisnik bez interneta</h3>
+								<p>Uz Parkmatix uređaj koji je spojen na Monri Payment authorisation host je moguće platiti karticom bez Internet pristupa.</p>
 							</div>
 							<div class="single-department">
 								<span></span>
-								<h3>Login Or Signup</h3>
-								<p>Lorem ipsum dolor samet consenter discing elitr, serewd diam nonumy eirmod tempor invidunt.</p>
+								<h3>Beskontaktno plaćanje na parkomatima</h3>
+								<p>Parkmatix parkomati su opremljeni najmodernijim platnim hibridnim terminalima sa SDK pristupom.</p>
 							</div>
 							<div class="single-department">
 								<span></span>
-								<h3>Search Your Doctor & Book</h3>
-								<p>Lorem ipsum dolor samet consenter discing elitr, serewd diam nonumy eirmod tempor invidunt.</p>
+								<h3>PCI DSS certificirano rješenje</h3>
+								<p>Parkmatix se bazira na Monri Payments PCI DSS Level 1 certifikaciji čiji je član kod VISA-a i MasterCarda zadnjih 8 godina.</p>
 							</div>
 						</div>
 					</div>
@@ -385,7 +383,7 @@
 								</button>
 								<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
 									<div class="faq-content">
-										Aplikacija podržava plaćanje Visom i  Mastercardom.									</div>
+										Aplikacija podržava plaćanje Visom i  Mastercardom.</div>
 								</div>
 							</div>
 							<div class="single-faq">
@@ -394,16 +392,26 @@
 								</button>
 								<div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
 									<div class="faq-content">
-										Kao korisnik ćete dobiti push notifikaciju na telefonu 15 minuta prije isteka važeće parking karte kako biste na vrijeme platili svoju parking kartu.									</div>
+										Kao korisnik ćete dobiti push notifikaciju na telefonu 15 minuta prije isteka važeće parking karte kako biste na vrijeme platili svoju parking kartu.</div>
 								</div>
 							</div>
 							<div class="single-faq">
-								<button class="w-100 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+								<button class="w-100 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
 									Ako sam recimo platio kartu za 1h, a u međuvremenu sam shvatio da ću parkirati duže od 1h, šta mogu uraditi?
 								</button>
-								<div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+								<div id="collapseFour" class="collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
 									<div class="faq-content">
-U tom slučaju, ne morate nas kontaktirati preko podrške, jednostavno možete produžiti trajanje vašeg parkinga tako što ćete na aplikaciji otići na vašu kupljenu kartu i kliknuti opciju “Produži“.								</div>
+                                       U tom slučaju, ne morate nas kontaktirati preko podrške, jednostavno možete produžiti trajanje vašeg parkinga tako što ćete na aplikaciji otići na vašu kupljenu kartu i kliknuti opciju “Produži“.</div>
+							</div>
+						</div>
+						<div class="single-faq">
+							<button class="w-100 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+								Šta mogu uraditi ako imam neki problem, ako recimo sam parkirao u pogrešnoj Zoni, ako sam parkirao auto koji nisam prijavio na aplikaciji ?
+							</button>
+							<div id="collapseFive" class="collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+								<div class="faq-content">
+									U slučaju bilo kakvih problema, možete se javiti na podršku gdje možete napisati poruku i obavijestiti nas o bilo kakvom problemu.							
+								</div>
 							</div>
 						</div>
 					</div>
