--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                       <a class="page-scroll" href="#about">Usluge</a>
                     </li>
                     <li class="nav-item">
-                      <a class="page-scroll" href="#testimonial">Preuzmi</a>
+                      <a class="page-scroll" href="#footer">Preuzmi</a>
                     </li>
                     <li class="nav-item">
                       <a class="page-scroll" href="#explore">Plaćanje</a>
@@ -258,7 +258,7 @@
 		<!-- ========================= department-section end ========================= -->
 
 		<!-- ========================= testimonial-section start ========================= -->
-		<section id="testimonial" class="testimonial-section">
+		<!-- <section id="testimonial" class="testimonial-section">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-xxl-5 col-xl-6 col-lg-7">
@@ -295,7 +295,7 @@
 			
 					</div>
 	</div>
-		</section>
+		</section> -->
     <!-- ========================= testimonial-section end ========================= -->
 
 		<!-- ========================= steps-section start ========================= -->
@@ -423,7 +423,7 @@
 									<li> <a class="page-scroll active" href="#home" >Početna</a> </li>
 									<li> <a class="page-scroll active" href="#feature" href="javascript:void(0)">Prednosti</a> </li>
 									<li> <a class="page-scroll active" href="#about">Usluge</a> </li>
-									<li> <a class="page-scroll active" href="#testimonial">Preuzmi</a> </li>
+									<li> <a class="page-scroll active" href="#footer">Preuzmi</a> </li>
 									<li> <a class="page-scroll active" href="#explore" >Plaćanje</a> </li>
 									<li> <a class="page-scroll active" href="#faq">FAQ</a> </li>
 								</ul>
@@ -450,9 +450,31 @@
 							</div>
 						</div>
 						<div class="col-xl-4 col-md-6">
+
 							<div class="footer-widget">
 								<h3>Instaliraj</h3>
-								<ul class="download">
+								<div class="col-lg-6">
+										<img src="assets/img/install/Instaliraj1.svg" alt="">
+								</div>
+
+								<div class="col-lg-6">
+										<img src="assets/img/install/Instaliraj2.svg" alt="">
+								</div> 
+
+								<!--- <ul class="download">
+									<li>
+										<a href="">
+											<img src="assets/img/install/Instaliraj1.svg" alt="">
+										</a>
+									</li>
+									<li>
+										<a href="">
+											<img src="assets/img/install/Instaliraj2.svg" alt="">
+										</a>
+									</li>
+								</ul> -->
+
+								<!-- <ul class="download">
 									<li>
 										<a href="javascript:void(0)">
 											<span class="icon"><i class="lni lni-apple"></i></span>
@@ -465,7 +487,7 @@
 											<span class="text">Instaliraj na <b>Play Store</b> </span>
 										</a>
 									</li>
-								</ul>
+								</ul> -->
 							</div>
 						</div>
 					</div>
