--- a/index.html
+++ b/index.html
@@ -453,6 +453,7 @@
 
 							<div class="footer-widget">
 								<h3>Instaliraj</h3>
+							<div class="row"> 
 								<div class="col-lg-6">
 										<img src="assets/img/install/Instaliraj1.svg" alt="">
 								</div>
@@ -460,7 +461,7 @@
 								<div class="col-lg-6">
 										<img src="assets/img/install/Instaliraj2.svg" alt="">
 								</div> 
-
+							</div>
 								<!--- <ul class="download">
 									<li>
 										<a href="">
