--- a/index.html
+++ b/index.html
@@ -456,11 +456,12 @@
 								<h3>Instaliraj</h3>
 								<div class="row"> 
 									<div class="col-lg-6">
-											<img src="assets/img/install/Instaliraj1.svg" alt="">
+						
+										<a href = "https://www.apple.com/app-store/"><img src="assets/img/install/Instaliraj1.svg"> target = "_blank"</a>
 									</div>
 
 									<div class="col-lg-6">
-											<img src="assets/img/install/Instaliraj2.svg" alt="">
+											<a href = "https://play.google.com/store/games?hl=en&pli=1"><img src="assets/img/install/Instaliraj2.svg"> target="_blank"</a>
 									</div> 
 								</div>
 							</div>
